--- a/App.xaml
+++ b/App.xaml
@@ -13,13 +13,14 @@
 
         <Style x:Key="CopyBtn" TargetType="Button">
             <Setter Property="Margin" Value="10 0"/>
-            <Setter Property="Padding" Value="0 -5 0 0" />
+            <Setter Property="Padding" Value="0" />
             <Setter Property="Height" Value="30"/>
             <Setter Property="Width" Value="30"/>
             <Setter Property="Background" Value="Transparent" />
-            <Setter Property="FontSize" Value="20" />
-            <Setter Property="FontFamily" Value="Wingdings 2" />
-            <Setter Property="Content" Value="." />
+            <Setter Property="FontSize" Value="22" />
+            <Setter Property="FontFamily" Value="Cambria" />
+            <Setter Property="Content" Value="⎘" />
+            <Setter Property="ToolTip" Value="Kopiera kundnummer" />
             <Setter Property="BorderThickness" Value="0" />
             <Style.Triggers>
                 <Trigger Property="IsMouseOver" Value="True">
