--- a/Views/Issues_View.xaml
+++ b/Views/Issues_View.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:CustomersReg.Views" 
              xmlns:models="clr-namespace:CustomersReg.Models"
+             xmlns:services="clr-namespace:CustomersReg.Services"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" Background="GhostWhite">
     <Grid>
@@ -16,11 +17,11 @@
 
         <ListView x:Name="ILV" Grid.Column="0" Background="Transparent" Loaded="ILV_LoadedAsync">
             <ListView.DataContext>
-                <models:Issue />
+                <services:IsuueViewerService />
             </ListView.DataContext>
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <Grid Height="auto" VerticalAlignment="Center" Width="780">
+                    <Grid Height="auto" VerticalAlignment="Center" Width="780" Margin="5">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="1*"/>
                             <ColumnDefinition Width="2*"/>
@@ -29,10 +30,7 @@
                             <RowDefinition Height="30"/>
                             <RowDefinition Height="30"/>
                         </Grid.RowDefinitions>
-                        <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Horizontal">
-                            <TextBlock Text="Kundnumr.:"/>
-                            <TextBlock Text="{Binding IdCustomers}"/>
-                        </StackPanel>
+                        <TextBlock Grid.Column="0" Grid.Row="0" FontWeight="DemiBold" Text="{Binding CustomerName}"/>
                         <TextBlock Grid.Column="1" Grid.Row="0" FontWeight="DemiBold" Text="{Binding Subject}"/>
                         <TextBlock Grid.Column="0" Grid.Row="1" FontSize="10" Text="{Binding CreationDate}" />
                         <TextBlock Grid.Column="1" Grid.Row="1" FontSize="10" TextWrapping="Wrap" Text="{Binding Description}" />
